--- a/250226_UMLChess/250226_UMLChess.vcxproj.filters
+++ b/250226_UMLChess/250226_UMLChess.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="250226_UMLChess.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Unit.cpp">
